fix migration api doc
