# emdad-backend/app/Http/Controllers/Accounts/SubscriptionController.php
@@ -128,7 +128,7 @@ class SubscriptionController extends Controller
      */
     public function getBuyerPackages(Request $request)
     {
-        $user = User::all()->first();
+        $user = User::first();
         return response()->json(["success" => true, "data" =>$user->used_basic_packeg ? SubscriptionPackageResource::collection(SubscriptionPackages::where("type", 1)->where('subscription_name','!=','basic')->get()): SubscriptionPackageResource::collection(SubscriptionPackages::where("type", 1)->where('subscription_name','!=','basic_2')->get())], 200);
     }
 
@@ -161,7 +161,7 @@ class SubscriptionController extends Controller
      */
     public function getSupplierPackages(Request $request)
     {
-        $user = User::all()->first();
+        $user = User::first();
         return response()->json(["success" => true, "data" =>$user->used_basic_packeg ? SubscriptionPackageResource::collection(SubscriptionPackages::where("type", 2)->where('subscription_name','!=','basic')->get()): SubscriptionPackageResource::collection(SubscriptionPackages::where("type", 2)->where('subscription_name','!=','basic_2')->get())], 200);
     }
 
@@ -189,7 +189,7 @@ class SubscriptionController extends Controller
     }
             /**
         * @OA\get(
-        * path="/api/v1_0/installtion/migrate",
+        * path="/api/v1_0/installation/migrate",
         * operationId="migrateDb",
         * tags={"Platform Settings"},
         * summary="migrate db",
